DevTools: introduce Network.addCookies, make getCookies conform to the protocol docs.

Bug: 755332
Change-Id: I8e0661c573cc3803b12ff0556d1a606070c8a002