third_party/WebKit/Source/devtools/front_end/sdk/CookieModel.js
@@ -21,7 +21,7 @@ SDK.CookieModel = class extends SDK.SDKModel {
     cookie.addAttribute('path', protocolCookie['path']);
     cookie.addAttribute('port', protocolCookie['port']);
     if (protocolCookie['expires'])
-      cookie.addAttribute('expires', protocolCookie['expires']);
+      cookie.addAttribute('expires', String(protocolCookie['expires'] * 1000));
     if (protocolCookie['httpOnly'])
       cookie.addAttribute('httpOnly');
     if (protocolCookie['secure'])
@@ -97,7 +97,7 @@ SDK.CookieModel = class extends SDK.SDKModel {
     return this.target()
         .networkAgent()
         .setCookie(
-            cookie.url(), cookie.name(), cookie.value(), domain, cookie.path(), cookie.secure(), cookie.httpOnly(),
+            cookie.name(), cookie.value(), cookie.url(), domain, cookie.path(), cookie.secure(), cookie.httpOnly(),
             cookie.sameSite(), expires)
         .then(success => !!success);
   }
