chrome/test/chromedriver/window_commands.cc
@@ -131,7 +131,8 @@ Status GetVisibleCookies(WebView* web_view,
     cookie_dict->GetString("path", &path);
     double expiry = 0;
     cookie_dict->GetDouble("expires", &expiry);
-    expiry /= 1000;  // Convert from millisecond to second.
+    if (expiry > 1e14)
+      expiry /= 1000;  // Backwards compatibility ms -> sec.
     bool http_only = false;
     cookie_dict->GetBoolean("httpOnly", &http_only);
     bool session = false;
